--- a/free-nodes/page-5.htm
+++ b/free-nodes/page-5.htm
@@ -110,6 +110,81 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-06">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、新加坡、欧洲、韩国、美国、日本、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-05">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享" src="/uploads/20241222-1/321988b62eb0968a443ca3848a3f071f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-5-free-v2ray-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月5日18.1M/S|免费VPN/Shadowrocket/SSR/Clash/V2ray免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、加拿大、韩国、日本、美国、香港等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-04">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享" src="/uploads/20241222-1/5f167ecea9a0c5eda7bc8fa7798e5773.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-4-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月4日19.8M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、加拿大、韩国、日本、美国、香港、欧洲等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-03">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享" src="/uploads/20241222-1/410b34121b845fee70063f582f79928f.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了加拿大、韩国、香港、欧洲、日本、美国、新加坡等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-04-02">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img alt="VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享" src="/uploads/20241222-1/9e2b225d869222c8f450f1935366fea1.webp" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享                                    </h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、新加坡、美国、加拿大、韩国、香港、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-04-01">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-4-1-free-v2ray.htm" class="xcblog-blog-url">
@@ -135,16 +210,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-100352.htm" title="使用类在C ++中实现矢量数量">使用类在C ++中实现矢量数量</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-7-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享">VPN设备 | 4月7日20.2M/S|免费VPN/V2ray/SSR/Shadowrocket/Clash免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 5月6日19.5M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享">VPN设备 | 5月6日19.5M/S|免费VPN/Clash/V2ray/SSR/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-15-node-share.htm" title="VPN设备 | 4月15日21.6M/S|免费VPN/Clash/SSR/V2ray/Shadowrocket免费节点订阅分享">VPN设备 | 4月15日21.6M/S|免费VPN/Clash/SSR/V2ray/Shadowrocket免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-28-node-share-links.htm" title="VPN设备 | 4月28日18.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享">VPN设备 | 4月28日18.5M/S|免费VPN/Clash/Shadowrocket/V2ray/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-6-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享">VPN设备 | 4月6日21.1M/S|免费VPN/Clash/SSR/Shadowrocket/V2ray免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-4-30-clash-v2ray-ss-ssr.htm" title="VPN设备 | 4月30日22.6M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 4月30日22.6M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
-                        <li class="py-2"><a href="/news/article-110867.htm" title="import axios from ‘axios‘失效的问题">import axios from ‘axios‘失效的问题</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-1-node-share.htm" title="VPN设备 | 5月1日19.1M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享">VPN设备 | 5月1日19.1M/S|免费VPN/Shadowrocket/V2ray/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-2-node-share.htm" title="VPN设备 | 5月2日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享">VPN设备 | 5月2日22.9M/S|免费VPN/Shadowrocket/V2ray/SSR/Clash免费节点订阅分享</a></li>
                         <li class="py-2"><a href="/news/article-111692.htm" title="动物医院名字创意图片素材大全（动物医院名片设计）">动物医院名字创意图片素材大全（动物医院名片设计）</a></li>
-                        <li class="py-2"><a href="/news/article-95913.htm" title="宠物流浪狗免费领养（流浪狗领养小程序）">宠物流浪狗免费领养（流浪狗领养小程序）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-3-free-high-speed-nodes.htm" title="VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享">VPN设备 | 4月3日20.9M/S|免费VPN/V2ray/Shadowrocket/Clash/SSR免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-103362.htm" title="青岛想念动物医院电话地址是多少啊（青岛思念餐厅）">青岛想念动物医院电话地址是多少啊（青岛思念餐厅）</a></li>
+                        <li class="py-2"><a href="/news/article-107501.htm" title="pyqt5入门到基本按钮弹窗，多窗口实现等">pyqt5入门到基本按钮弹窗，多窗口实现等</a></li>
+                        <li class="py-2"><a href="/news/article-91378.htm" title="动物疫苗管理法律法规最新文件 动物疫苗管理法律法规最新文件是什么">动物疫苗管理法律法规最新文件 动物疫苗管理法律法规最新文件是什么</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-4-2-free-high-speed-nodes.htm" title="VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享">VPN设备 | 4月2日21.6M/S|免费VPN/SSR/V2ray/Clash/Shadowrocket免费节点订阅分享</a></li>
+                        <li class="py-2"><a href="/news/article-105645.htm" title="Spring按业务模块输出日志到不同的文件_在线工具">Spring按业务模块输出日志到不同的文件_在线工具</a></li>
+                        <li class="py-2"><a href="/news/article-98793.htm" title="Spring Boot Web项目ConcurrentLinkedQueue+ReentrantLock+Condition实现消费者功能(类似MQ队列)">Spring Boot Web项目ConcurrentLinkedQueue+ReentrantLock+Condition实现消费者功能(类似MQ队列)</a></li>
                     </ul>
     </div>
 </div>
@@ -156,7 +231,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">90</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
